fixed bug where the content kept stretching after 980px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,7 @@ div {
 		height: 100%;
 		padding: 0px 40px;
 		width: 100%;
+		max-width: 960px;
 	}
 
 	.titleH1 {
@@ -324,6 +325,9 @@ div {
 	.padBody{
 		padding: 0% 5%;
 		width:97%;
+		max-width: 960px;
+		margin-right: auto;
+		margin-left: auto;
 	}
 	
 }
@@ -331,6 +335,7 @@ div {
 @media (max-width: 980px) {
 	header {
 		height: 68px;
+		width: 100%;
 	}
 
 	nav {
